[gd_scene load_steps=87 format=3 uid="uid://d26j2nusorvjk"]

[ext_resource type="PackedScene" uid="uid://bjtqnkqwvtqki" path="res://entity.tscn" id="1_tg83y"]
[ext_resource type="Script" path="res://Source/Player.gd" id="1_vop0c"]
[ext_resource type="Texture2D" uid="uid://bhmkbf01lknbj" path="res://Asset/Battlecruiser_Base.png" id="2_0rdic"]
[ext_resource type="Texture2D" uid="uid://bdcbfi0tung8p" path="res://Asset/FireJet.png" id="3_x4ann"]
[ext_resource type="Texture2D" uid="uid://ltfaidarhr2v" path="res://Asset/Dreadnought_Shield.png" id="5_hl6uf"]
[ext_resource type="Texture2D" uid="uid://bxwkd5kewkuvu" path="res://Asset/Battlecruiser_Engine.png" id="6_x37wx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_eqjy4"]
atlas = ExtResource("3_x4ann")
region = Rect2(0, 0, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhipy"]
atlas = ExtResource("3_x4ann")
region = Rect2(68, 0, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjypw"]
atlas = ExtResource("3_x4ann")
region = Rect2(136, 0, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnvvf"]
atlas = ExtResource("3_x4ann")
region = Rect2(204, 0, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_md3hg"]
atlas = ExtResource("3_x4ann")
region = Rect2(272, 0, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wnil"]
atlas = ExtResource("3_x4ann")
region = Rect2(340, 0, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_yap8h"]
atlas = ExtResource("3_x4ann")
region = Rect2(408, 0, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_mq8pt"]
atlas = ExtResource("3_x4ann")
region = Rect2(476, 0, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_wx086"]
atlas = ExtResource("3_x4ann")
region = Rect2(544, 0, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hgmt"]
atlas = ExtResource("3_x4ann")
region = Rect2(612, 0, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_rutrk"]
atlas = ExtResource("3_x4ann")
region = Rect2(0, 9, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_6w7r3"]
atlas = ExtResource("3_x4ann")
region = Rect2(68, 9, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_ks65d"]
atlas = ExtResource("3_x4ann")
region = Rect2(136, 9, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mvlp"]
atlas = ExtResource("3_x4ann")
region = Rect2(204, 9, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_ag4bf"]
atlas = ExtResource("3_x4ann")
region = Rect2(272, 9, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_fj00p"]
atlas = ExtResource("3_x4ann")
region = Rect2(340, 9, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_sogg7"]
atlas = ExtResource("3_x4ann")
region = Rect2(408, 9, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkwkr"]
atlas = ExtResource("3_x4ann")
region = Rect2(476, 9, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxa6k"]
atlas = ExtResource("3_x4ann")
region = Rect2(544, 9, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1gdy"]
atlas = ExtResource("3_x4ann")
region = Rect2(612, 9, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gr50"]
atlas = ExtResource("3_x4ann")
region = Rect2(0, 18, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_vk7su"]
atlas = ExtResource("3_x4ann")
region = Rect2(68, 18, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5otf"]
atlas = ExtResource("3_x4ann")
region = Rect2(136, 18, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqncx"]
atlas = ExtResource("3_x4ann")
region = Rect2(204, 18, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2m4q"]
atlas = ExtResource("3_x4ann")
region = Rect2(272, 18, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcw8r"]
atlas = ExtResource("3_x4ann")
region = Rect2(340, 18, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_aewaj"]
atlas = ExtResource("3_x4ann")
region = Rect2(408, 18, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4n5g"]
atlas = ExtResource("3_x4ann")
region = Rect2(476, 18, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_bld1e"]
atlas = ExtResource("3_x4ann")
region = Rect2(544, 18, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ogmh"]
atlas = ExtResource("3_x4ann")
region = Rect2(612, 18, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_hesbl"]
atlas = ExtResource("3_x4ann")
region = Rect2(0, 27, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_4flnb"]
atlas = ExtResource("3_x4ann")
region = Rect2(68, 27, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_ex02l"]
atlas = ExtResource("3_x4ann")
region = Rect2(136, 27, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_lehh6"]
atlas = ExtResource("3_x4ann")
region = Rect2(204, 27, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_reu4a"]
atlas = ExtResource("3_x4ann")
region = Rect2(272, 27, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajk16"]
atlas = ExtResource("3_x4ann")
region = Rect2(340, 27, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dxjf"]
atlas = ExtResource("3_x4ann")
region = Rect2(408, 27, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_aw4na"]
atlas = ExtResource("3_x4ann")
region = Rect2(476, 27, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqnmo"]
atlas = ExtResource("3_x4ann")
region = Rect2(544, 27, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ndc8"]
atlas = ExtResource("3_x4ann")
region = Rect2(612, 27, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_msvqd"]
atlas = ExtResource("3_x4ann")
region = Rect2(0, 36, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_0reho"]
atlas = ExtResource("3_x4ann")
region = Rect2(68, 36, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jsjh"]
atlas = ExtResource("3_x4ann")
region = Rect2(136, 36, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_13u3w"]
atlas = ExtResource("3_x4ann")
region = Rect2(204, 36, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xcum"]
atlas = ExtResource("3_x4ann")
region = Rect2(272, 36, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_dl1ya"]
atlas = ExtResource("3_x4ann")
region = Rect2(340, 36, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_glt81"]
atlas = ExtResource("3_x4ann")
region = Rect2(408, 36, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_iy3tw"]
atlas = ExtResource("3_x4ann")
region = Rect2(476, 36, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_bw6r2"]
atlas = ExtResource("3_x4ann")
region = Rect2(544, 36, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro4ol"]
atlas = ExtResource("3_x4ann")
region = Rect2(612, 36, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvd53"]
atlas = ExtResource("3_x4ann")
region = Rect2(0, 45, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldj0f"]
atlas = ExtResource("3_x4ann")
region = Rect2(68, 45, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_ad7el"]
atlas = ExtResource("3_x4ann")
region = Rect2(136, 45, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gv05"]
atlas = ExtResource("3_x4ann")
region = Rect2(204, 45, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ew0y"]
atlas = ExtResource("3_x4ann")
region = Rect2(272, 45, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_uq87j"]
atlas = ExtResource("3_x4ann")
region = Rect2(340, 45, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fgql"]
atlas = ExtResource("3_x4ann")
region = Rect2(408, 45, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypkv0"]
atlas = ExtResource("3_x4ann")
region = Rect2(476, 45, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_rloll"]
atlas = ExtResource("3_x4ann")
region = Rect2(544, 45, 68, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_3127o"]
atlas = ExtResource("3_x4ann")
region = Rect2(612, 45, 68, 9)

[sub_resource type="SpriteFrames" id="SpriteFrames_apkbw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqjy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhipy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjypw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnvvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md3hg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wnil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yap8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mq8pt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wx086")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hgmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rutrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6w7r3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ks65d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mvlp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ag4bf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fj00p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sogg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkwkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxa6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1gdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gr50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vk7su")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5otf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqncx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2m4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcw8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aewaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4n5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bld1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ogmh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hesbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4flnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ex02l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lehh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_reu4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajk16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dxjf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aw4na")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqnmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ndc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msvqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0reho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jsjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13u3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xcum")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dl1ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glt81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iy3tw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bw6r2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro4ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvd53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldj0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ad7el")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gv05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ew0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uq87j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fgql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypkv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rloll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3127o")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_6o43q"]
atlas = ExtResource("5_hl6uf")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_431u8"]
atlas = ExtResource("5_hl6uf")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kqe7"]
atlas = ExtResource("5_hl6uf")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sd27f"]
atlas = ExtResource("5_hl6uf")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfwry"]
atlas = ExtResource("5_hl6uf")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3q1if"]
atlas = ExtResource("5_hl6uf")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_prfka"]
atlas = ExtResource("5_hl6uf")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfkp3"]
atlas = ExtResource("5_hl6uf")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_namh1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6o43q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_431u8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kqe7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sd27f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfwry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3q1if")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prfka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfkp3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_i88qj"]
atlas = ExtResource("6_x37wx")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfqtc"]
atlas = ExtResource("6_x37wx")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cy0tv"]
atlas = ExtResource("6_x37wx")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8k3kv"]
atlas = ExtResource("6_x37wx")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrl4r"]
atlas = ExtResource("6_x37wx")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rxx1"]
atlas = ExtResource("6_x37wx")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqwia"]
atlas = ExtResource("6_x37wx")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnu1i"]
atlas = ExtResource("6_x37wx")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_6jaag"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i88qj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfqtc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cy0tv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8k3kv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrl4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rxx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqwia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnu1i")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_amltc"]
radius = 27.0
height = 84.0

[node name="Player" instance=ExtResource("1_tg83y")]
script = ExtResource("1_vop0c")

[node name="FireJetFast" type="Node2D" parent="AnimationCenter" index="0"]
unique_name_in_owner = true

[node name="FireJet1" type="AnimatedSprite2D" parent="AnimationCenter/FireJetFast" index="0"]
position = Vector2(-12, 71)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_apkbw")

[node name="FireJet2" type="AnimatedSprite2D" parent="AnimationCenter/FireJetFast" index="1"]
position = Vector2(12, 71)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_apkbw")

[node name="FireJet3" type="AnimatedSprite2D" parent="AnimationCenter/FireJetFast" index="2"]
position = Vector2(2.72848e-12, 83)
rotation = 1.5708
scale = Vector2(1.3, 1.3)
sprite_frames = SubResource("SpriteFrames_apkbw")

[node name="BattlecruiserBase" type="Sprite2D" parent="AnimationCenter" index="1"]
texture = ExtResource("2_0rdic")

[node name="PLayerShield" type="AnimatedSprite2D" parent="AnimationCenter" index="2"]
visible = false
modulate = Color(1, 1, 1, 0.592157)
sprite_frames = SubResource("SpriteFrames_namh1")
frame = 5
frame_progress = 0.61777

[node name="FireJetSlow" type="AnimatedSprite2D" parent="AnimationCenter" index="3"]
unique_name_in_owner = true
visible = false
position = Vector2(0, 7)
sprite_frames = SubResource("SpriteFrames_6jaag")
frame = 6
frame_progress = 0.26112

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource("CapsuleShape2D_amltc")

[node name="AttackTimer" type="Timer" parent="." index="2"]
unique_name_in_owner = true
one_shot = true
autostart = true

[node name="SpecialTimer" type="Timer" parent="." index="3"]
unique_name_in_owner = true
one_shot = true
autostart = true
